--- a/alternatives/server-flask/uwsgi.ini
+++ b/alternatives/server-flask/uwsgi.ini
@@ -1,10 +1,29 @@
 [uwsgi]
-module = src:create_app()
-
+strict = 1
 master = true
-processes = 5
-
-uid=nginx
-
-socket = /var/run/nginx/uwsgi.sock
+threads = 5
 vacuum = true
+
+if-env = USER_UID
+uid = %(_)
+gid = %(_)
+endif=
+if-not-env = USER_ID
+uid = nobody
+gid = nobody
+endif=
+
+if-env = COMMON_LOG_FORMAT
+set-placeholder = log_for=%(_)
+endif =
+if-opt = log_for=stackdriver
+logger = default stdio
+log-route = default ^((?!\{).)*$
+log-encoder = json:default {"time":"${micros}", "source":"uwsgi", "message":"${msg}"}
+log-encoder = nl
+endif =
+
+manage-script-name=1
+mount=/api=/develop/src/wsgi.py
+
+http-socket=:8080
