--- a/scripts/helm-dev.yaml
+++ b/scripts/helm-dev.yaml
@@ -4,6 +4,6 @@ full-stack:
   services:
     server:
       env:
-        # Uncomment to enable API docs and GraphQL/Swagger playground on dev
-        # API_DOCS_ENABLED: true
-        # API_PLAYGROUND_ENABLED: true
+        # Set true to enable API docs and GraphQL/Swagger playground on dev
+        API_DOCS_ENABLED: false
+        API_PLAYGROUND_ENABLED: false
