chore: configurable db statement timeout

--- a/scripts/terraform.yaml
+++ b/scripts/terraform.yaml
@@ -71,6 +71,7 @@ settings:
         DATABASE_USER: ${db_database_app_username}
         DATABASE_POOL_MIN: "5"
         DATABASE_POOL_MAX: "10"
+        DATABASE_STATEMENT_TIMEOUT: "28000" # 28s to timeout before AWS API Gateway
         REDIS_HOST: ${taito_random_name}-${taito_env}-001.${taito_random_name}-${taito_env}.nde1c2.use1.cache.amazonaws.com
         REDIS_PORT: 6379
         BUCKET_BUCKET: ${st_bucket_name}
