--- a/docker-compose-remote.yaml
+++ b/docker-compose-remote.yaml
@@ -41,7 +41,7 @@ services:
 
   full-stack-template-${taito_env}-admin:
     container_name: full-stack-template-${taito_env}-admin
-    image: _IMAGE_REGISTRY_/full-stack-template/admin:_IMAGE_TAG_
+    image: _IMAGE_REGISTRY_/admin:_IMAGE_TAG_
     deploy:
        replicas: 1    
     restart: unless-stopped
@@ -62,7 +62,7 @@ services:
 
   full-stack-template-${taito_env}-client:
     container_name: full-stack-template-${taito_env}-client
-    image: _IMAGE_REGISTRY_/full-stack-template/client:_IMAGE_TAG_
+    image: _IMAGE_REGISTRY_/client:_IMAGE_TAG_
     deploy:
        replicas: 1    
     restart: unless-stopped
@@ -87,7 +87,7 @@ services:
 
   full-stack-template-${taito_env}-server:
     container_name: full-stack-template-${taito_env}-server
-    image: _IMAGE_REGISTRY_/full-stack-template/server:_IMAGE_TAG_
+    image: _IMAGE_REGISTRY_/server:_IMAGE_TAG_
     deploy:
        replicas: 1    
     restart: unless-stopped
@@ -131,7 +131,7 @@ services:
 
   full-stack-template-${taito_env}-www:
     container_name: full-stack-template-${taito_env}-www
-    image: _IMAGE_REGISTRY_/full-stack-template/www:_IMAGE_TAG_
+    image: _IMAGE_REGISTRY_/www:_IMAGE_TAG_
     deploy:
        replicas: 1    
     restart: unless-stopped
