--- a/docker-compose-remote.yaml
+++ b/docker-compose-remote.yaml
@@ -2,21 +2,17 @@
 # Docker Compose. It is not needed if you use Kubernetes or cloud services
 # instead.
 
-# TODO: health checks
-
 version: '3.9'
-x-logging:
-  &default-logging
+x-logging: &default-logging
   options:
     max-size: '100m'
     max-file: '10'
   driver: json-file
-x-healthcheck:
-   &default-healthcheck
-   test: wget --no-verbose --tries=1 --spider http://localhost:8080/healthz
-   interval: 60s
-   retries: 5
-   start_period: 30s
+x-healthcheck: &default-healthcheck
+   test: wget -O/dev/null --tries=1 http://localhost:8080/healthz
+   interval: 20s
+   retries: 4
+   start_period: 20s
    timeout: 10s
 
 services:
@@ -25,7 +21,9 @@ services:
     image: nginx:stable-alpine
     restart: unless-stopped
     logging: *default-logging
-    healthcheck: *default-healthcheck
+    healthcheck:
+      << : *default-healthcheck
+      test: wget -O/dev/null --tries=1 --server-response http://localhost:80 2>&1 | grep "401 Unauthorized\|200 OK"
     networks:
       - default
     ports:
@@ -152,7 +150,9 @@ services:
     image: bitnami/redis:6.0
     restart: unless-stopped
     logging: *default-logging
-    # TODO healthcheck
+    healthcheck:
+      << : *default-healthcheck
+      test: redis-cli ping
     networks:
       - default
     ports:
