--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -31,6 +31,11 @@ http {
         # auth_basic              "basic";
         # auth_basic_user_file    /run/secrets/BASIC_AUTH_HTPASSWD;
 
+        location = /ingress-healthz {
+            access_log off;
+            return 200;
+        }
+
         location /admin {
             client_max_body_size 1k;
 
