--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -21,7 +21,7 @@ ENV ASSETS_PATH ASSETS_PATH
 ENV ASSETS_DOMAIN ASSETS_DOMAIN
 ENV API_ROOT ''
 ENV API_URL /api
-ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
+ENV SENTRY_PUBLIC_DSN #sentryPublicDSN
 
 RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
