--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -6,11 +6,11 @@ WORKDIR /develop
 
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/*.sh \
-     ${SERVICE_DIR}/package* \
-     /develop/
+    ${SERVICE_DIR}/package* \
+    /develop/
 
 ENV NODE_ENV development
-ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
+ENV SENTRY_PUBLIC_DSN #sentryPublicDSN
 RUN ./install.sh
 RUN cp ~/.bashrc /home/node/.bashrc
 RUN mkdir -p /build && \
@@ -40,9 +40,9 @@ RUN npm run build && \
 FROM nginx:stable-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
-      company=taito \
-      project=full-stack-template \
-      role=www
+    company=taito \
+    project=full-stack-template \
+    role=www
 RUN mkdir -p /service
 WORKDIR /service
 RUN chown -R nginx:root /service && \
