--- a/client/package.json
+++ b/client/package.json
@@ -99,6 +99,7 @@
     "rollup-plugin-minify-html-literals": "1.2.6",
     "source-map-explorer": "2.5.2",
     "storybook-dark-mode": "1.1.0",
+    "ts-node": "10.9.1",
     "typescript": "4.7.2",
     "vite": "2.9.9",
     "vite-plugin-favicon2": "1.1.4",
