--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -10,7 +10,7 @@ COPY ${SERVICE_DIR}/*.sh \
     /develop/
 
 ENV NODE_ENV development
-ENV SENTRY_PUBLIC_DSN #sentryPublicDSN
+ENV SENTRY_DSN #sentryDSN
 RUN ./install.sh
 RUN cp ~/.bashrc /home/node/.bashrc
 RUN mkdir -p /build && \
