feat(terraform): add default allowedMethods for storage cors

--- a/scripts/terraform-dev.yaml
+++ b/scripts/terraform-dev.yaml
@@ -7,4 +7,5 @@ settings:
         - allowedOrigins:
             - https://${taito_domain}
             - http://localhost:9999
+          allowedMethods: ["HEAD", "GET"]
 # END
