chore: disable www and admin until updated or removed

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,25 +1,28 @@
-# Builder, tester and runtime container for local development
-# NOTE: Use the same cypress version both in Dockerfile and package.json to
-#       avoid unnecessary cypress download
-FROM ghcr.io/taitounited/cypress:9.3.1
+FROM node:lts-alpine
+CMD echo "DISABLED: admin not up-to-date" && tail -f /dev/null
 
-# Init /develop for user USER_UID
-ARG USER_UID=1001
-RUN useradd --system --uid "${USER_UID}" --gid 0 -m developer || :
-RUN mkdir -p /develop && \
-     chown "${USER_UID}:0" /develop
-WORKDIR /develop
-USER "${USER_UID}"
+# # Builder, tester and runtime container for local development
+# # NOTE: Use the same cypress version both in Dockerfile and package.json to
+# #       avoid unnecessary cypress download
+# FROM ghcr.io/taitounited/cypress:9.3.1
 
-ARG SERVICE_DIR=.
-COPY --chown="${USER_UID}:0" \
-     ${SERVICE_DIR}/package.json \
-     ${SERVICE_DIR}/package-lock.* \
-     /develop/
+# # Init /develop for user USER_UID
+# ARG USER_UID=1001
+# RUN useradd --system --uid "${USER_UID}" --gid 0 -m developer || :
+# RUN mkdir -p /develop && \
+#      chown "${USER_UID}:0" /develop
+# WORKDIR /develop
+# USER "${USER_UID}"
 
-ENV NODE_ENV development
-RUN npm install --loglevel warn
+# ARG SERVICE_DIR=.
+# COPY --chown="${USER_UID}:0" \
+#      ${SERVICE_DIR}/package.json \
+#      ${SERVICE_DIR}/package-lock.* \
+#      /develop/
 
-ENV DEV_PORT 8080
-EXPOSE 8080
-CMD npm install; npm run start
+# ENV NODE_ENV development
+# RUN npm install --loglevel warn
+
+# ENV DEV_PORT 8080
+# EXPOSE 8080
+# CMD npm install; npm run start
