--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
     "taito-host-unit": "echo Running unit tests locally && npm-run-all -p -c taito-host-unit:admin taito-host-unit:client taito-host-unit:server taito-host-unit:worker taito-host-unit:www ",
-    "taito-host-unit:admin": "cd admin && npm-run-all 'unit {@}' --",
+    "taito-host-unit:admin": "cd admin && echo DISABLED: unit test disabled from admin until updated or removed",
     "taito-host-unit:client": "cd client && npm-run-all 'unit {@}' --",
     "taito-host-unit:server": "cd server && npm-run-all 'unit {@}' --",
     "taito-host-unit:worker": "cd worker && npm-run-all 'unit {@}' --",
