feat(client): update lingui and use swc instead of babel

--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.13",
-    "@lingui/macro": "3.14.0",
-    "@lingui/react": "3.14.0",
+    "@lingui/macro": "4.0.0",
+    "@lingui/react": "4.0.0",
     "@loadable/component": "5.15.3",
     "@sentry/browser": "7.50.0",
     "apollo3-cache-persist": "0.14.1",
@@ -30,7 +30,6 @@
     "graphql": "16.5.0",
     "history": "5.3.0",
     "lodash": "4.17.21",
-    "make-plural": "7.1.0",
     "react": "18.2.0",
     "react-aria": "3.24.0",
     "react-dom": "18.2.0",
@@ -53,7 +52,9 @@
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
-    "@lingui/cli": "3.14.0",
+    "@lingui/cli": "4.0.0",
+    "@lingui/swc-plugin": "4.0.0",
+    "@lingui/vite-plugin": "4.0.0",
     "@optimize-lodash/rollup-plugin": "4.0.3",
     "@rollup/plugin-strip": "3.0.2",
     "@storybook/addon-actions": "6.5.5",
@@ -78,6 +79,7 @@
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
     "@vitejs/plugin-react": "4.0.0",
+    "@vitejs/plugin-react-swc": "3.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "27.5.1",
     "babel-plugin-macros": "3.1.0",
