feat(client): upgrade storybook to v7

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "lang:add-locale": "lingui add-locale",
     "lang:extract": "lingui extract",
     "lang:compile": "lingui compile",
-    "uikit:preview": "start-storybook -p 6006",
+    "uikit:preview": "storybook dev -p 6006",
+    "uikit:build": "storybook build",
     "generate:graphql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
@@ -53,14 +54,11 @@
     "@lingui/vite-plugin": "4.1.2",
     "@optimize-lodash/rollup-plugin": "4.0.3",
     "@rollup/plugin-strip": "3.0.2",
-    "@storybook/addon-actions": "6.5.5",
-    "@storybook/addon-docs": "6.5.5",
-    "@storybook/addon-essentials": "6.5.5",
-    "@storybook/addon-links": "6.5.5",
-    "@storybook/addons": "6.5.5",
-    "@storybook/builder-webpack5": "6.5.5",
-    "@storybook/manager-webpack5": "6.5.5",
-    "@storybook/react": "6.5.5",
+    "@storybook/addon-essentials": "7.0.12",
+    "@storybook/addon-interactions": "7.0.12",
+    "@storybook/addon-links": "7.0.12",
+    "@storybook/react-vite": "7.0.12",
+    "@storybook/theming": "7.0.12",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -76,7 +74,6 @@
     "@vitejs/plugin-react": "4.0.0",
     "@vitejs/plugin-react-swc": "3.3.0",
     "@vitest/coverage-c8": "0.31.1",
-    "core-js": "3.30.1",
     "cypress": "9.3.1",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
@@ -88,13 +85,14 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.12",
     "jsdom": "22.0.0",
     "pg-promise": "10.11.1",
     "prettier": "2.8.8",
     "rollup-plugin-minify-html-literals": "1.2.6",
     "source-map-explorer": "2.5.3",
-    "storybook-dark-mode": "1.1.0",
-    "ts-node": "10.9.1",
+    "storybook": "7.0.12",
+    "storybook-dark-mode": "3.0.0",
     "typescript": "5.0.4",
     "vite": "4.3.3",
     "vite-plugin-favicon2": "1.1.5",
