build: notifying slack on fail in #builds channel

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -167,7 +167,7 @@ jobs:
         if: failure()
         uses: voxmedia/github-action-slack-notify-build@v1
         with:
-          channel_id: TODO_CHANNEL_ID # CHANNEL_NAME
+          channel_id: builds # TODO: project channel name
           status: FAILED
           color: danger
         env:
