feat(client): improve taito html plugins and redesign splash screen

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -34,7 +34,7 @@
       "~test/*": ["src/test/*"]
     }
   },
-  "include": ["shared", "src"],
+  "include": ["shared", "src", "plugins"],
   "exclude": [
     "node_modules",
     "assets",
