--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "@storybook/addon-links": "7.0.12",
     "@storybook/react-vite": "7.0.12",
     "@storybook/theming": "7.0.12",
+    "@swc/core": "1.3.55",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
