--- a/server/package.json
+++ b/server/package.json
@@ -50,7 +50,7 @@
     "serverless-http": "~2.7.0",
     "showdown": "~1.9.1",
     "stack-trace": "0.0.10",
-    "type-graphql": "^2.0.0-beta.1",
+    "type-graphql": "2.0.0-beta.1",
     "typedi": "0.10.0",
     "uuid": "~8.3.2",
     "ws": "8.13.0"
