--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-aria": "3.24.0",
+    "react-aria-components": "1.0.0-alpha.4",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
     "react-icons": "4.8.0",
